feat: setup form

--- a/src/_shared.scss
+++ b/src/_shared.scss
@@ -24,6 +24,8 @@
 // COLORS
 $white: #FFFFFF;
 $light-gray: #e5e5e5;
+$light-silver: #D5D4D8;
+$cod-gray: #0D0D0D;
 
 // FONTS
 $font-size-small: rem(11px);
