--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -23,7 +23,7 @@
 
     &__breadcrumb {
         display: flex;
-        align-items: end;
+        align-items: flex-end;
         list-style-type: none;
         margin: 0 10px;
         font-size: 14px;
